# dinov2.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  benchmark_results.txt  dinov2.cpp  dinov2.h  environment.yml  inference.cpp  linear_probe.o3549359  linear_probe.o3564440  main-vit.cpp  main.cpp  main.py  pca.cpp  pca.hpp  pretokenization.o3199087  pretokenization.o3199090  pretokenization.o3201851  pretokenization.o3205702  pretokenization.o3218118  pyproject.toml  quantize.cpp  realtime.cpp  realtime.h  run.py  vit.cpp  vit.h
cmake/: External-OpenCV.cmake
configs/infer/TiTok/: titok_b64.yaml  titok_bl128_vae_c16.yaml  titok_bl128_vq8k.yaml  titok_bl64_vae_c16.yaml  titok_bl64_vq8k.yaml  titok_l32.yaml  titok_ll32_vae_c16.yaml  titok_s128.yaml  titok_sl256_vq8k.yaml
configs/training/TiTok/stage1/: titok_b64.yaml  titok_l32.yaml  titok_s128.yaml
configs/training/TiTok/stage2/: titok_b64.yaml  titok_l32.yaml  titok_s128.yaml
configs/training/finetune/: linear_probe.yaml
configs/training/generator/: maskgit.yaml
reports/: citations.bib  proposal.tex
reports/midpoint-checkin/: citations.bib  midpoint-checkin.tex
reports/proposal/: citations.bib
scripts/: benchmark.py  benchmark.sh  convert-pth-to-ggml.py  dinov2-to-ggml.py  dinov2-to-gguf.py  inference.py  upload_dataset.py  vit-to-ggml.py
scripts/data/: convert_imagenet_to_wds.py
scripts/inference/: sample_imagenet_titok.py
scripts/slurm/: convert_imagenet_to_wds.sh  linear_probe.sh  pretokenization.o3195959  pretokenization.sh
scripts/train/: linear_prob-wds_fix.py  linear_probe.py  pretokenization.py  train_maskgit.py  train_titok.py
src/dinov2_inference/: types.py
src/efficient_cv/: __init__.py
src/efficient_cv/data/: __init__.py  imagenet.py  imagenet_classes.py
src/efficient_cv/evaluate/: metrics.py  utils.py
src/efficient_cv/losses/: __init__.py
src/efficient_cv/modeling/modules/: losses.py
src/efficient_cv/models/: maskgit.py  titok.py
src/efficient_cv/models/layers/: __init__.py  blocks.py  lpips.py  maskgit_vqgan.py  perceptual_loss.py
src/efficient_cv/models/quantizer/: quantizer.py
src/efficient_cv/pretokenization-test/: pretokenization.py
src/efficient_cv/train/: finetune.py
src/efficient_cv/utils/: lr_schedulers.py  misc.py  train.py  train_utils.py  viz.py
src/evaluate/: evaluator.py  inception.py
