[project]
name = "dinov2_inference"
version = "0.0.1"
description = "A library for efficient computer vision on edge devices."
authors = [
    { name = "Michael Krah", email = "mickra@bu.edu" },
    { name = "Zach Gentile", email = "zgentile@bu.edu" },
    { name = "Alex Lavaee", email = "alavaee@bu.edu" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch", "hf_transfer", "transformers[torch]", "memory-profiler", "threadpoolctl"]

[tool.uv.pip]
torch-backend = "auto"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dinov2_inference"]
namespaces = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
