[project]
name = "dinov2_inference"
version = "0.0.1"
description = "A library for efficient computer vision on edge devices."
authors = [
    { name = "Michael Krah", email = "mickra@bu.edu" },
    { name = "Zach Gentile", email = "zgentile@bu.edu" },
    { name = "Alex Lavaee", email = "alavaee@bu.edu" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "timm",
    "torchvision",
    "Pillow",
    "transformers[torch]",
    "memory-profiler",
    "threadpoolctl",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["dinov2_inference"]
namespaces = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
