[project]
name = "dinov2_inference"
version = "0.0.1"
description = "A library for efficient computer vision on edge devices."
authors = [
    { name = "Michael Krah", email = "mickra@bu.edu" },
    { name = "Zach Gentile", email = "zgentile@bu.edu" },
    { name = "Alex Lavaee", email = "alavaee@bu.edu" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "timm",
    "torchvision",
    "Pillow",
    "transformers[torch]",
    "memory-profiler",
    "threadpoolctl",
    "gguf",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["dinov2_inference"]
namespaces = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
